fix some broken css

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -2,7 +2,7 @@
   --boardSize: 512px;
   --cellSize: calc(var(--boardSize) / 8);
   --cellBackgroundBlack: #794d03;
-  --cellBackgroundWhite: color(var(--cellBackgroundBlack) l(80%));
+  --cellBackgroundWhite: color-mod(var(--cellBackgroundBlack) l(80%));
   --infoSize: calc(var(--cellSize) / 2);
 }
 
@@ -36,6 +36,7 @@
     background: var(--cellBackgroundBlack);
   }
 
+  /* all borders */
   &:nth-child(8n+1):before,
   &:nth-child(8n):before,
   &:nth-child(-n+8):after,
@@ -48,7 +49,7 @@
   /* left */
   &:nth-child(8n+1):before {
     top: 0;
-    left: -var(--infoSize);
+    left: calc(-1 * var(--infoSize));
     width: var(--infoSize);
     height: var(--cellSize);
   }
@@ -56,7 +57,7 @@
   /* right */
   &:nth-child(8n):before {
     top: 0;
-    right: -var(--infoSize);
+    right: calc(-1 * var(--infoSize));
     width: var(--infoSize);
     height: var(--cellSize);
   }
@@ -72,7 +73,7 @@
 
   /* top */
   &:nth-child(n+56):after {
-    top: -var(--infoSize);
+    top: calc(-1 * var(--infoSize));
     left: 0;
     width: var(--cellSize);
     height: var(--infoSize);
